added toolbar and logout functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="start_game">Start</string>
     <string name="txt_question">Question</string>
+    <string name="logout_menu">Sign Out</string>
 </resources>
