--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,13 @@
     <string name="app_name">Climate Application</string>
 
     <string name="start_game">Start</string>
-    <string name="txt_question">Loading question, please wait</string>
+    <string name="txt_question">Loading question, please wait…</string>
     <string name="logout_menu">Sign Out</string>
 
     <string name="close_app">Are you sure you want to quit?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
