--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,14 +4,14 @@
     <string name="start_game">Start</string>
     <string name="txt_question">Loading question, please wait…</string>
     <string name="logout_menu">Sign Out</string>
-
     <string name="close_app">Are you sure you want to quit?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-
     <string name="navigation_drawer_open">Open Drawer</string>
     <string name="navigation_drawer_close">Close Drawer</string>
     <string name="squirrelly">Squirrelly</string>
     <string name="discounts">Discounts</string>
     <string name="menu">Menu</string>
+    <string name="user_points">My points: %1$s</string>
+    <string name="discount_cost">Cost: %1$s points</string>
 </resources>
