--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,21 @@
     <string name="user_points">My points: %1$s</string>
     <string name="discount_cost">Cost: %1$s points</string>
 
+    <string name="txt_pause">Pause</string>
+    <string name="txt_resume">Resume</string>
+    <string name="txt_rewards">Rewards</string>
+    <string name="txt_start">Start</string>
+    <string name="txt_victory">Victory!</string>
+    <string name="txt_loss">Loss!</string>
+
+    <string name="txt_score">Score: %1$d</string>
+    <string name="txt_HP">HP: %1$d</string>
+    <string name="txt_throws">Throws: %1$d</string>
+    <string name="txt_wind_x">Wind(x): %1$s</string>
+    <string name="txt_wind_y">Wind(y): %1$s</string>
+
+    <string name="quiz_answer_correct_key">QuizAnswerCorrect</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
