--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
+
+    <string name="swipe">swipe</string>
+    <string name="use_discount">Do you want to use this discount now?</string>
+    <string name="discount_used">Discount used!</string>
 </resources>
