fixed a bug with updating user data in ArActivity. Also added the code to navigate to discount view from ArActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
 
     <string name="txt_pause">Pause</string>
     <string name="txt_resume">Resume</string>
-    <string name="txt_rewards">Rewards</string>
+    <string name="txt_rewards">Discounts</string>
     <string name="txt_start">Start</string>
     <string name="txt_victory">Victory!</string>
     <string name="txt_loss">Loss!</string>
