--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,8 +84,9 @@
     <string name="loading_daily_tip">Loading daily tip…</string>
 
     <string name="settings">Settings</string>
-    <string name="sounds">Sounds</string>
     <string name="vibration">Vibration</string>
+    <string name="music">Music</string>
+    <string name="sounds">Sounds</string>
     <string name="on">On</string>
     <string name="off">Off</string>
 </resources>
