--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="txt_wind_x">Wind(x): %1$s</string>
     <string name="txt_wind_y">Wind(y): %1$s</string>
 
+    <string name="meters_per_second">%1$d m/s</string>
+
     <string name="quiz_answer_correct_key">QuizAnswerCorrect</string>
 
     <!-- TODO: Remove or change this placeholder text -->
