--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,11 @@
     <string name="sounds">Sounds</string>
     <string name="on">On</string>
     <string name="off">Off</string>
+
+    <string name="got_it">GOT IT!</string>
+    <string name="guide_wind_direction">This tells you direction of the wind</string>
+    <string name="guide_wind_streght">This tells you the strength of the wind</string>
+    <string name="guide_hp">Here are the health points of the monster</string>
+    <string name="guide_throws">Here are the amount of throws you have to beat the monster</string>
+    <string name="guide_pause">Here you can pause and resume the game any time you want</string>
 </resources>
